POWR-271-2 Add featured media field and banner image to content and groups

--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser_embed
     - field.field.group.bureau_office.field_address
     - field.field.group.bureau_office.field_audience
     - field.field.group.bureau_office.field_building
@@ -15,6 +16,7 @@ dependencies:
     - field.field.group.bureau_office.field_enable_programs_menu_item
     - field.field.group.bureau_office.field_enable_projects_menu_item
     - field.field.group.bureau_office.field_enable_services_and_inform
+    - field.field.group.bureau_office.field_featured_media
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
@@ -29,6 +31,7 @@ dependencies:
     - address
     - chosen_field
     - cleave
+    - entity_browser
     - field_group
     - image
     - maxlength
@@ -162,6 +165,21 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_featured_media:
+    type: entity_browser_entity_reference
+    weight: 33
+    settings:
+      entity_browser: image_browser_embed
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: thumbnail
+      field_widget_replace: false
+      open: false
+    region: content
+    third_party_settings: {  }
   field_legacy_path:
     weight: 10
     settings:
