--- a/web/sites/default/config/core.entity_form_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.program.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser_embed
     - field.field.group.program.field_address
     - field.field.group.program.field_audience
     - field.field.group.program.field_building
@@ -14,6 +15,7 @@ dependencies:
     - field.field.group.program.field_enable_programs_menu_item
     - field.field.group.program.field_enable_projects_menu_item
     - field.field.group.program.field_enable_services_and_inform
+    - field.field.group.program.field_featured_media
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
     - field.field.group.program.field_parent_group
@@ -27,6 +29,7 @@ dependencies:
     - address
     - chosen_field
     - cleave
+    - entity_browser
     - field_group
     - image
     - maxlength
@@ -152,6 +155,21 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_featured_media:
+    type: entity_browser_entity_reference
+    weight: 23
+    settings:
+      entity_browser: image_browser_embed
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: thumbnail
+      field_widget_replace: false
+      open: false
+    region: content
+    third_party_settings: {  }
   field_legacy_path:
     weight: 9
     settings:
