--- a/web/sites/default/config/core.entity_form_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.page.default.yml
@@ -3,8 +3,10 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser_embed
     - field.field.node.page.field_audience
     - field.field.node.page.field_body_content
+    - field.field.node.page.field_featured_media
     - field.field.node.page.field_group
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_page_type
@@ -16,6 +18,7 @@ dependencies:
   module:
     - chosen_field
     - content_moderation
+    - entity_browser
     - maxlength
     - path
     - text
@@ -26,7 +29,7 @@ mode: default
 content:
   created:
     type: datetime_timestamp
-    weight: 14
+    weight: 13
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -37,21 +40,36 @@ content:
     type: chosen_select
     region: content
   field_body_content:
-    weight: 7
+    weight: 6
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
     type: text_textarea
     region: content
+  field_featured_media:
+    type: entity_browser_entity_reference
+    weight: 4
+    settings:
+      entity_browser: image_browser_embed
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: thumbnail
+      field_widget_replace: false
+      open: false
+    region: content
+    third_party_settings: {  }
   field_group:
-    weight: 12
+    weight: 11
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
     region: content
   field_legacy_path:
-    weight: 9
+    weight: 8
     settings:
       size: 60
       placeholder: ''
@@ -65,7 +83,7 @@ content:
     type: options_select
     region: content
   field_related_content:
-    weight: 8
+    weight: 7
     settings:
       match_operator: CONTAINS
       size: 60
@@ -74,7 +92,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_reviewer:
-    weight: 15
+    weight: 14
     settings:
       match_operator: CONTAINS
       size: 60
@@ -83,7 +101,7 @@ content:
     type: entity_reference_autocomplete
     region: content
   field_summary:
-    weight: 4
+    weight: 5
     settings:
       rows: 2
       placeholder: ''
@@ -103,13 +121,13 @@ content:
     region: content
   moderation_state:
     type: moderation_state_default
-    weight: 16
+    weight: 15
     settings: {  }
     region: content
     third_party_settings: {  }
   path:
     type: path
-    weight: 10
+    weight: 9
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -126,7 +144,7 @@ content:
         maxlength_js_label: 'Google will display search results at about 78 characters max for titles. Content limited to @limit characters, remaining: <strong>@remaining</strong>'
   uid:
     type: entity_reference_autocomplete
-    weight: 13
+    weight: 12
     region: content
     settings:
       match_operator: CONTAINS
@@ -134,7 +152,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 11
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
