--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -15,6 +15,7 @@ dependencies:
     - field.field.group.bureau_office.field_enable_programs_menu_item
     - field.field.group.bureau_office.field_enable_projects_menu_item
     - field.field.group.bureau_office.field_enable_services_and_inform
+    - field.field.group.bureau_office.field_featured_media
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
@@ -36,6 +37,7 @@ third_party_settings:
       settings: {  }
     regions:
       content:
+        - field_featured_media
         - field_summary
         - group_site_menu_entity_view_1
 id: group.bureau_office.default
@@ -43,9 +45,25 @@ targetEntityType: group
 bundle: bureau_office
 mode: default
 content:
+  field_featured_media:
+    type: entity_reference_entity_view
+    weight: 0
+    label: hidden
+    settings:
+      view_mode: banner
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    region: content
   field_summary:
     type: string
-    weight: 0
+    weight: 1
     region: content
     label: hidden
     settings:
@@ -80,7 +98,7 @@ content:
             fis-def-at: false
             fi-def-at: false
   group_site_menu_entity_view_1:
-    weight: 1
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
