--- a/web/sites/default/config/core.entity_view_display.group.program.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.program.default.yml
@@ -14,6 +14,7 @@ dependencies:
     - field.field.group.program.field_enable_programs_menu_item
     - field.field.group.program.field_enable_projects_menu_item
     - field.field.group.program.field_enable_services_and_inform
+    - field.field.group.program.field_featured_media
     - field.field.group.program.field_legacy_path
     - field.field.group.program.field_logo
     - field.field.group.program.field_parent_group
@@ -34,6 +35,7 @@ third_party_settings:
       settings: {  }
     regions:
       content:
+        - field_featured_media
         - field_summary
         - group_site_menu_entity_view_1
 id: group.program.default
@@ -41,58 +43,24 @@ targetEntityType: group
 bundle: program
 mode: default
 content:
-  field_enable_guides_and_informat:
-    weight: 2
-    label: above
+  field_featured_media:
+    weight: 0
+    label: hidden
     settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_enable_news_and_notices_me:
-    weight: 3
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_enable_programs_menu_item:
-    weight: 4
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_enable_projects_menu_item:
-    weight: 5
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
-    region: content
-  field_enable_services_and_inform:
-    weight: 6
-    label: above
-    settings:
-      format: default
-      format_custom_false: ''
-      format_custom_true: ''
-    third_party_settings: {  }
-    type: boolean
+      view_mode: banner
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
     region: content
   field_summary:
-    weight: 0
+    weight: 1
     settings:
       link_to_entity: false
     third_party_settings:
@@ -128,7 +96,7 @@ content:
     type: string
     label: hidden
   group_site_menu_entity_view_1:
-    weight: 1
+    weight: 2
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -141,6 +109,11 @@ hidden:
   field_email: true
   field_enable_documents_menu_item: true
   field_enable_events_menu_item: true
+  field_enable_guides_and_informat: true
+  field_enable_news_and_notices_me: true
+  field_enable_programs_menu_item: true
+  field_enable_projects_menu_item: true
+  field_enable_services_and_inform: true
   field_legacy_path: true
   field_logo: true
   field_parent_group: true
