--- a/web/sites/default/config/core.entity_view_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.project.default.yml
@@ -10,6 +10,7 @@ dependencies:
     - field.field.group.project.field_enable_guides_and_informat
     - field.field.group.project.field_enable_news_and_notices_me
     - field.field.group.project.field_enable_projects_menu_item
+    - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
     - field.field.group.project.field_shortname_or_acronym
@@ -29,6 +30,7 @@ third_party_settings:
       settings: {  }
     regions:
       content:
+        - field_featured_media
         - field_date_time_range
         - field_summary
         - group_site_menu_entity_view_1
@@ -39,7 +41,7 @@ mode: default
 content:
   field_date_time_range:
     type: daterange_default
-    weight: 0
+    weight: 1
     region: content
     label: inline
     settings:
@@ -75,8 +77,24 @@ content:
             fis: false
             fis-def-at: false
             fi-def-at: false
+  field_featured_media:
+    weight: 0
+    label: hidden
+    settings:
+      view_mode: banner
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
+    region: content
   field_summary:
-    weight: 1
+    weight: 2
     label: hidden
     settings:
       link_to_entity: false
@@ -112,7 +130,7 @@ content:
     type: string
     region: content
   group_site_menu_entity_view_1:
-    weight: 2
+    weight: 3
     region: content
     settings: {  }
     third_party_settings: {  }
