--- a/web/sites/default/config/core.entity_view_display.node.event.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.event.featured.yml
@@ -1,8 +1,9 @@
-uuid: 314e7772-2862-4322-b342-b5e68496e948
+uuid: d78c44a4-43f8-4fbf-8212-90b7473149ee
 langcode: en
-status: true
+status: false
 dependencies:
   config:
+    - core.entity_view_mode.node.featured
     - field.field.node.event.field_all_day
     - field.field.node.event.field_body_content
     - field.field.node.event.field_end_date
@@ -34,16 +35,22 @@ third_party_settings:
     default: default
   ds:
     layout:
-      id: layout_onecol
-      library: layout_discovery/onecol
+      id: cloudy_featured-with-image
+      library: null
       disable_css: false
       entity_classes: all_classes
-      settings: {  }
+      settings:
+        wrappers: null
+        outer_wrapper: null
+        attributes: ''
+        link_attribute: null
+        link_custom: null
+        classes:
+          layout_class: {  }
     regions:
-      content:
-        - field_featured_media
-        - field_start_date
+      first:
         - group_date_and_time
+        - field_start_date
         - field_end_date
         - group_start_to_end_time
         - field_event_location
@@ -52,13 +59,15 @@ third_party_settings:
         - field_start_time
         - field_body_content
         - field_end_time
+      second:
+        - field_featured_media
   field_group:
     group_date_and_time:
       children:
         - field_start_date
         - field_end_date
       parent_name: ''
-      weight: 1
+      weight: 0
       format_type: html_element
       format_settings:
         label: 'Start to end date'
@@ -71,14 +80,14 @@ third_party_settings:
         id: ''
         classes: 'event--date h4'
       label: 'Start to end date'
-      region: content
+      region: hidden
     group_start_to_end_time:
       children:
         - field_all_day
         - field_start_time
         - field_end_time
       parent_name: ''
-      weight: 2
+      weight: 1
       format_type: html_element
       format_settings:
         label: 'Start to end time'
@@ -91,16 +100,16 @@ third_party_settings:
         id: ''
         classes: 'event--time h4 mb-4'
       label: 'Start to end time'
-      region: content
-id: node.event.default
+      region: hidden
+id: node.event.featured
 targetEntityType: node
 bundle: event
-mode: default
+mode: featured
 content:
   field_all_day:
     type: boolean
     weight: 3
-    region: content
+    region: first
     label: hidden
     settings:
       format: custom
@@ -137,8 +146,8 @@ content:
             fi-def-at: false
   field_body_content:
     type: text_default
-    weight: 5
-    region: content
+    weight: 4
+    region: first
     label: hidden
     settings: {  }
     third_party_settings: {  }
@@ -178,7 +187,7 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: datetime_default
-    region: content
+    region: first
   field_end_time:
     weight: 5
     label: hidden
@@ -214,10 +223,10 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: time_formatter
-    region: content
+    region: first
   field_event_location:
     type: entity_reference_revisions_entity_view
-    weight: 3
+    weight: 2
     label: hidden
     settings:
       view_mode: default
@@ -231,14 +240,14 @@ content:
             lb: ''
             lb-col: false
             classes: {  }
-    region: content
+    region: first
   field_featured_media:
     type: entity_reference_entity_view
-    weight: 0
-    region: content
+    weight: 5
+    region: second
     label: hidden
     settings:
-      view_mode: banner
+      view_mode: featured
       link: false
     third_party_settings:
       ds:
@@ -284,7 +293,7 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: datetime_default
-    region: content
+    region: first
   field_start_time:
     weight: 4
     label: hidden
@@ -320,9 +329,9 @@ content:
             fis-def-at: false
             fi-def-at: false
     type: time_formatter
-    region: content
+    region: first
   field_summary:
-    weight: 4
+    weight: 3
     label: hidden
     settings:
       link_to_entity: false
@@ -356,7 +365,7 @@ content:
             fi: false
             fi-def-at: false
     type: string
-    region: content
+    region: first
 hidden:
   content_moderation_control: true
   field_group: true
