--- a/web/sites/default/config/core.entity_view_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.default.yml
@@ -35,6 +35,7 @@ third_party_settings:
       settings: {  }
     regions:
       content:
+        - field_featured_media
         - field_summary
         - field_body_content
 id: node.news.default
@@ -44,7 +45,7 @@ mode: default
 content:
   field_body_content:
     type: text_default
-    weight: 1
+    weight: 2
     region: content
     label: hidden
     settings: {  }
@@ -59,15 +60,22 @@ content:
             classes: {  }
   field_featured_media:
     type: entity_reference_entity_view
-    weight: 2
-    label: above
+    weight: 0
+    label: hidden
     settings:
-      view_mode: default
+      view_mode: banner
       link: false
-    third_party_settings: {  }
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
     region: content
   field_summary:
-    weight: 0
+    weight: 1
     label: hidden
     settings:
       link_to_entity: false
