--- a/web/sites/default/config/core.entity_view_display.node.news.featured.yml
+++ b/web/sites/default/config/core.entity_view_display.node.news.featured.yml
@@ -7,6 +7,7 @@ dependencies:
     - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
+    - field.field.node.news.field_featured_media
     - field.field.node.news.field_group
     - field.field.node.news.field_legacy_path
     - field.field.node.news.field_published_on
@@ -68,6 +69,22 @@ targetEntityType: node
 bundle: news
 mode: featured
 content:
+  field_featured_media:
+    type: entity_reference_entity_view
+    weight: 0
+    region: second
+    label: hidden
+    settings:
+      view_mode: featured
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
   field_summary:
     weight: 1
     label: hidden
