--- a/web/sites/default/config/core.entity_view_display.node.page.default.yml
+++ b/web/sites/default/config/core.entity_view_display.node.page.default.yml
@@ -5,6 +5,7 @@ dependencies:
   config:
     - field.field.node.page.field_audience
     - field.field.node.page.field_body_content
+    - field.field.node.page.field_featured_media
     - field.field.node.page.field_group
     - field.field.node.page.field_legacy_path
     - field.field.node.page.field_page_type
@@ -33,6 +34,7 @@ third_party_settings:
       settings: {  }
     regions:
       content:
+        - field_featured_media
         - field_body_content
 id: node.page.default
 targetEntityType: node
@@ -45,6 +47,22 @@ content:
     settings: {  }
     third_party_settings: {  }
     type: text_default
+    region: content
+  field_featured_media:
+    weight: 0
+    label: hidden
+    settings:
+      view_mode: banner
+      link: false
+    third_party_settings:
+      ds:
+        ft:
+          id: default
+          settings:
+            lb: ''
+            lb-col: false
+            classes: {  }
+    type: entity_reference_entity_view
     region: content
 hidden:
   content_moderation_control: true
