--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser_embed
     - field.field.group.project.field_audience
     - field.field.group.project.field_date_time_range
     - field.field.group.project.field_enable_documents_menu_item
@@ -10,6 +11,7 @@ dependencies:
     - field.field.group.project.field_enable_guides_and_informat
     - field.field.group.project.field_enable_news_and_notices_me
     - field.field.group.project.field_enable_projects_menu_item
+    - field.field.group.project.field_featured_media
     - field.field.group.project.field_legacy_path
     - field.field.group.project.field_parent_group
     - field.field.group.project.field_shortname_or_acronym
@@ -19,6 +21,7 @@ dependencies:
   module:
     - chosen_field
     - datetime_range
+    - entity_browser
     - field_group
     - maxlength
 third_party_settings:
@@ -92,6 +95,21 @@ content:
     third_party_settings: {  }
     type: boolean_checkbox
     region: content
+  field_featured_media:
+    type: entity_browser_entity_reference
+    weight: 16
+    settings:
+      entity_browser: image_browser_embed
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: thumbnail
+      field_widget_replace: false
+      open: false
+    region: content
+    third_party_settings: {  }
   field_legacy_path:
     weight: 8
     settings:
