--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -3,6 +3,7 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.image_browser_embed
     - field.field.node.news.field_body_content
     - field.field.node.news.field_feature_this_content
     - field.field.node.news.field_feature_until
@@ -21,8 +22,8 @@ dependencies:
     - conditional_fields
     - content_moderation
     - datetime
+    - entity_browser
     - maxlength
-    - media_library
     - path
     - text
 id: node.news.default
@@ -84,9 +85,18 @@ content:
     type: datetime_default
     region: content
   field_featured_media:
-    type: media_library_widget
+    type: entity_browser_entity_reference
     weight: 3
-    settings: {  }
+    settings:
+      entity_browser: image_browser_embed
+      field_widget_display: rendered_entity
+      field_widget_edit: true
+      field_widget_remove: true
+      selection_mode: selection_append
+      field_widget_display_settings:
+        view_mode: thumbnail
+      field_widget_replace: false
+      open: false
     region: content
     third_party_settings:
       conditional_fields:
