POWR-863 Group services view should show services and pages

--- a/web/sites/default/config/views.view.group_services.yml
+++ b/web/sites/default/config/views.view.group_services.yml
@@ -12,7 +12,7 @@ dependencies:
     - node
     - user
 id: group_services
-label: 'Group: Services'
+label: 'Group: Services and Pages'
 module: views
 description: 'Shows services, service locations, and pages of all types (guide, information, etc.) for use with groups that have services.'
 tag: Group
@@ -54,7 +54,6 @@ display:
       pager:
         type: none
         options:
-          items_per_page: null
           offset: 0
       style:
         type: html_list
@@ -204,7 +203,6 @@ display:
                 operator: in
                 value:
                   page: page
-                  service_location: service_location
                   all: '0'
                   alert: '0'
                   building: '0'
@@ -214,6 +212,7 @@ display:
                   news: '0'
                   notification: '0'
                   city_service: '0'
+                  service_location: '0'
                   top_search: '0'
           entity_type: node
           entity_field: type
@@ -287,6 +286,20 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: standard
+        title_1:
+          id: title_1
+          table: node_field_data
+          field: title
+          relationship: none
+          group_type: group
+          admin_label: ''
+          order: ASC
+          exposed: false
+          expose:
+            label: ''
+          entity_type: node
+          entity_field: title
+          plugin_id: standard
       title: 'Services, guides, and information'
       header: {  }
       footer: {  }
@@ -302,6 +315,16 @@ display:
           required: true
           group_content_plugins:
             'group_node:city_service': 'group_node:city_service'
+            'group_node:page': 'group_node:page'
+            'group_node:alert': '0'
+            'group_node:building': '0'
+            'group_node:event': '0'
+            'group_node:guide': '0'
+            'group_node:information': '0'
+            'group_node:news': '0'
+            'group_node:notification': '0'
+            'group_node:service_location': '0'
+            'group_node:top_search': '0'
           entity_type: node
           plugin_id: group_content_to_entity_reverse
         gid:
@@ -354,6 +377,10 @@ display:
           plugin_id: group_id
       display_extenders: {  }
       use_ajax: true
+      filter_groups:
+        operator: AND
+        groups:
+          1: AND
     cache_metadata:
       max-age: -1
       contexts:
