POWR-842 try changing api to drupal

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -22,7 +22,7 @@ default:
             browser: chrome
             wd_host: http://localhost:4444/wd/hub
     Drupal\DrupalExtension:
-      api_driver: 'drush'
+      api_driver: 'drupal'
       blackbox: ~
       region_map:
         footer: "#footer"
