--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -23,6 +23,8 @@ default:
             wd_host: http://localhost:4444/wd/hub
     Drupal\DrupalExtension:
       api_driver: 'drupal'
+      drupal:
+        drupal_root: /var/www/html/web
       blackbox: ~
       region_map:
         footer: "#footer"
