POWR-842 try something

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -22,9 +22,7 @@ default:
             browser: chrome
             wd_host: http://localhost:4444/wd/hub
     Drupal\DrupalExtension:
-      api_driver: 'drupal'
-      drupal:
-        drupal_root: /var/www/html/web
+      api_driver: 'drush'
       blackbox: ~
       region_map:
         footer: "#footer"
