POWR-842 try try try

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -3,7 +3,7 @@ default:
     default:
       contexts:
         - FeatureContext
-        - GroupsContext
+        - GroupBehatContext
         - Drupal\DrupalExtension\Context\DrupalContext
         - Drupal\DrupalExtension\Context\MinkContext
         - Drupal\DrupalExtension\Context\MessageContext
@@ -33,6 +33,3 @@ default:
         success_message_selector: '.alert.alert-success'
       drush:
         binary: drush
-      subcontexts:
-        paths:
-          - "/var/www/html/web/modules/contrib/group"
