POWR-271-2 Remove news featured media dependency on featured content

--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -99,23 +99,7 @@ content:
       open: false
     region: content
     third_party_settings:
-      conditional_fields:
-        ca80418a-f2ae-407f-8b32-758dab6ebcf7:
-          dependee: field_feature_this_content
-          settings:
-            state: visible
-            condition: checked
-            grouping: AND
-            values_set: 1
-            value: ''
-            values: {  }
-            value_form:
-              value: false
-            effect: show
-            effect_options: {  }
-            selector: ''
-          entity_type: node
-          bundle: news
+      conditional_fields: {  }
   field_group:
     weight: 14
     settings: {  }
