POWR-271-2 Update featured image form display to use banner image style

--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -19,7 +19,6 @@ dependencies:
   module:
     - allowed_formats
     - chosen_field
-    - conditional_fields
     - content_moderation
     - datetime
     - entity_browser
@@ -94,12 +93,11 @@ content:
       field_widget_remove: true
       selection_mode: selection_append
       field_widget_display_settings:
-        view_mode: thumbnail
+        view_mode: banner
       field_widget_replace: false
       open: false
     region: content
-    third_party_settings:
-      conditional_fields: {  }
+    third_party_settings: {  }
   field_group:
     weight: 14
     settings: {  }
