--- a/web/sites/default/config/core.entity_form_display.group.project.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.project.default.yml
@@ -105,7 +105,7 @@ content:
       field_widget_remove: true
       selection_mode: selection_append
       field_widget_display_settings:
-        view_mode: thumbnail
+        view_mode: banner
       field_widget_replace: false
       open: false
     region: content
