--- a/web/sites/default/config/core.entity_form_display.paragraph.service_location.default.yml
+++ b/web/sites/default/config/core.entity_form_display.paragraph.service_location.default.yml
@@ -3,10 +3,11 @@ langcode: en
 status: true
 dependencies:
   config:
+    - entity_browser.browser.service_locations
     - field.field.paragraph.service_location.field_service_location
     - paragraphs.paragraphs_type.service_location
   module:
-    - content_moderation
+    - entity_browser
 id: paragraph.service_location.default
 targetEntityType: paragraph
 bundle: service_location
@@ -15,11 +16,16 @@ content:
   field_service_location:
     weight: 101
     settings:
-      match_operator: CONTAINS
-      size: 60
-      placeholder: ''
+      entity_browser: service_locations
+      field_widget_display: label
+      field_widget_edit: true
+      field_widget_remove: true
+      field_widget_replace: true
+      open: true
+      selection_mode: selection_append
+      field_widget_display_settings: {  }
     third_party_settings: {  }
-    type: entity_reference_autocomplete
+    type: entity_browser_entity_reference
     region: content
   moderation_state:
     type: moderation_state_default
