--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -26,6 +26,7 @@ default:
       blackbox: ~
       region_map:
         footer: "#footer"
+        tabs: "#page_tabs"
       selectors:
         message_selector: '.alert'
         error_message_selector: '.alert.alert-danger'
