POWR-842 - added header region

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -26,6 +26,7 @@ default:
       region_map:
         footer: "#footer"
         tabs: "#page_tabs"
+        header: "#header"
       selectors:
         message_selector: '.alert'
         error_message_selector: '.alert.alert-danger'
