POWR-842 - page_tags region not being recognized, try renaming it

--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -25,7 +25,7 @@ default:
       blackbox: ~
       region_map:
         footer: "#footer"
-        tabs: "#page_tabs"
+        tabs: "#tabs"
         header: "#header"
       selectors:
         message_selector: '.alert'
