--- a/tests/behat.yml
+++ b/tests/behat.yml
@@ -24,9 +24,10 @@ default:
     Drupal\DrupalExtension:
       blackbox: ~
       region_map:
-        footer: "#footer"
-        tabs: "#tabs"
         header: "#header"
+        tabs: "#tabs"
+        footer_first: "#footer_first"
+        footer_second: "#footer_second"
       selectors:
         message_selector: '.alert'
         error_message_selector: '.alert.alert-danger'
