--- a/web/sites/default/config/user.role.authenticated.yml
+++ b/web/sites/default/config/user.role.authenticated.yml
@@ -19,6 +19,7 @@ permissions:
   - 'access image_table_browser entity browser pages'
   - 'access media overview'
   - 'access media_browser entity browser pages'
+  - 'access service_locations entity browser pages'
   - 'access shortcuts'
   - 'access user profiles'
   - 'access video_browser entity browser pages'
