--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -111,7 +111,7 @@ build_and_deploy: &build_and_deploy
           
           # Set the git commit user name so it's clear in Pantheon log who made the change
           git config --global user.name $CIRCLE_USERNAME
-          git config --global user.email $CIRCLE_USERNAME@portlandoregon.gov
+          git config --global user.email $eGov_Email
 
           git commit -m "CircleCI deployment" --quiet
           # When commit on master, we deploy to DEV
