POWR-271-2 Change image default form display image preview style
Change default image form display image preview style so that the entire image is displayed when added as a featured image to content and groups.

--- a/web/sites/default/config/core.entity_form_display.media.image.default.yml
+++ b/web/sites/default/config/core.entity_form_display.media.image.default.yml
@@ -6,7 +6,7 @@ dependencies:
     - field.field.media.image.field_group
     - field.field.media.image.field_media_in_library
     - field.field.media.image.image
-    - image.style.banner_max_640w
+    - image.style.max_540w
     - media.type.image
   module:
     - chosen_field
@@ -30,7 +30,7 @@ content:
     type: image_focal_point
     weight: 1
     settings:
-      preview_image_style: banner_max_640w
+      preview_image_style: max_540w
       preview_link: true
       offsets: '50,50'
       progress_indicator: throbber
