POWR-271-2 Remove featured until dependency, auto populate feature until time

--- a/web/sites/default/config/core.entity_form_display.node.news.default.yml
+++ b/web/sites/default/config/core.entity_form_display.node.news.default.yml
@@ -63,24 +63,7 @@ content:
     weight: 2
     settings: {  }
     third_party_settings:
-      conditional_fields:
-        45b229a9-59b8-4a51-926c-4a94aacd928a:
-          dependee: field_feature_this_content
-          settings:
-            state: visible
-            condition: checked
-            grouping: AND
-            values_set: 2
-            value: ''
-            values: '1'
-            value_form: {  }
-            effect: show
-            effect_options: {  }
-            selector: ''
-            field_feature_this_content:
-              value: false
-          entity_type: node
-          bundle: news
+      conditional_fields: {  }
     type: datetime_default
     region: content
   field_featured_media:
