--- a/web/sites/default/config/field.field.node.news.field_feature_until.yml
+++ b/web/sites/default/config/field.field.node.news.field_feature_until.yml
@@ -17,15 +17,16 @@ field_name: field_feature_until
 entity_type: node
 bundle: news
 label: 'Feature until'
-description: ''
+description: 'You must select feature this content for this date to be used.'
 required: false
 translatable: false
 default_value:
   -
     default_date_type: relative
-    default_date: '+7 days'
+    default_date: 'now +30 days'
     field_defaults:
       update_defaults: 0
+      no_overwrite: 0
 default_value_callback: ''
 settings: {  }
 field_type: datetime
