--- a/web/sites/default/config/chosen.settings.yml
+++ b/web/sites/default/config/chosen.settings.yml
@@ -2,7 +2,7 @@ minimum_single: 0
 minimum_multiple: 0
 disable_search_threshold: 0
 minimum_width: 0
-jquery_selector: 'select#edit-field-topics, select#edit-field-audience, select#edit-field-community-actions'
+jquery_selector: 'select#edit-field-topics, select#edit-field-audience, select#edit-field-community-actions, select#edit-type'
 search_contains: true
 disable_search: false
 allow_single_deselect: true
@@ -12,9 +12,7 @@ no_results_text: 'No results match'
 disabled_themes:
   seven: '0'
   adminimal_theme: '0'
-  bootstrap_barrio: '0'
   cloudy: '0'
-  tweme: '0'
 chosen_include: 2
 _core:
   default_config_hash: JUHKHJeHl1bWXY41HMIcDR-VmAWvJ4OJycDubCkIeDU
