--- a/web/sites/default/config/chosen.settings.yml
+++ b/web/sites/default/config/chosen.settings.yml
@@ -2,7 +2,7 @@ minimum_single: 0
 minimum_multiple: 0
 disable_search_threshold: 0
 minimum_width: 0
-jquery_selector: 'select#edit-field-topics, select#edit-field-audience, select#edit-field-community-actions, select#edit-type'
+jquery_selector: 'select#edit-field-topics, select#edit-field-audience, select#edit-field-community-actions, select#edit-type, select#edit-field-parent-group-target-id'
 search_contains: true
 disable_search: false
 allow_single_deselect: true
