POWR-763 - updated label for parent group filter

--- a/web/sites/default/config/views.view.admin_groups.yml
+++ b/web/sites/default/config/views.view.admin_groups.yml
@@ -868,7 +868,7 @@ display:
           exposed: true
           expose:
             operator_id: field_parent_group_target_id_op
-            label: 'Parent bureau, office, or program (field_parent_group)'
+            label: 'Parent group'
             description: ''
             use_operator: false
             operator: field_parent_group_target_id_op
