--- a/web/sites/default/config/field.field.node.page.field_body_content.yml
+++ b/web/sites/default/config/field.field.node.page.field_body_content.yml
@@ -11,6 +11,7 @@ dependencies:
     - text
 third_party_settings:
   allowed_formats:
+    full_html: full_html
     simplified_editor_with_media_embed: simplified_editor_with_media_embed
     simple_editor: '0'
     rich_text: '0'
