POWR-872 Ignore local Lando override and remove redundant OS excludes.

--- a/.gitignore
+++ b/.gitignore
@@ -55,7 +55,6 @@ sites/simpletest
 .DS_Store*
 ehthumbs.db
 Icon
-
 Thumbs.db
 ._*
 
@@ -80,12 +79,6 @@ web/themes/custom/cloudy/js/main.bundle.js
 # Particle theme gitignore #
 ##########
 
-# OS generated files
-.DS_Store
-.DS_Store?
-._.DS_Store
-._.DS_Store?
-
 # Dependencies
 web/themes/custom/particle/node_modules
 web/themes/custom/particle/vendor
@@ -106,6 +99,10 @@ web/themes/custom/particle/source/styleguide/css
 # Errors
 npm-debug.log
 php_errors.log
+
+# Local Lando override file #
+##########
+.lando.local.yml
 
 # Local Lando node stuff #
 ##########
