POWR-872 Rename build script to follow Node naming conventions

--- a/.lando.yml
+++ b/.lando.yml
@@ -25,7 +25,7 @@ services:
 events:
   post-start:
     - node: echo "Building theme asset files..."
-    - node: npm -C web/themes/custom/cloudy run devbuild
+    - node: npm -C web/themes/custom/cloudy run build:dev
 tooling:
   drush:
     description: Run drush commands
@@ -62,4 +62,4 @@ tooling:
       - appserver: echo "Clearing cache..."
       - appserver: drush cr -y
       - appserver: echo "Building theme asset files..."
-      - node: npm -C web/themes/custom/cloudy run devbuild
+      - node: npm -C web/themes/custom/cloudy run build:dev
